# safe-sprout-backend

./: .env.example  .gitignore  analyze_night_risk.py  assign_risk_scores.py  build.sh  config.py  crime_data.py  expand_regions.py  fetch_ncrb_data.py  main.py  ml_model.py  pyproject.toml  render.yaml  requirements.txt  test_risk.py  train_model.py
data/: mumbai_risk_grid.json  mumbai_risk_grid_backup.json  night_risk_profiles.json
models/: model_metadata.json  risk_predictor.pkl  scaler.pkl
